# t9-back

./: .gitignore  Makefile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2022-05-13_init_d93a0a1d6ca7.py
t9_back/: __init__.py  __main__.py  cmd.py
t9_back/api/v1/: health.py  shorter.py  users.py  version.py
t9_back/lib/: factories.py  logging.py  settings.py  setup_app.py
t9_back/lib/dal/: links.py  stats.py  users.py
t9_back/lib/dal/models/: common.py  links.py  stats.py  users.py
t9_back/lib/factories/: base.py  repositories.py  services.py
t9_back/lib/serializers/: link.py  user.py
t9_back/lib/services/: jwt.py  link.py  qr.py  shorter.py  user.py
t9_back/lib/utils/: database.py  jwt.py  security.py
tests/: conftest.py  factory_boys.py
tests/integrations/: conftest.py
tests/integrations/dal/: test_links.py
tests/unittests/services/: test_serializers.py  test_shorter.py
